Fix overflow issues

--- a/packages/studio/src/components/modules/studio/api-editor/request-builder/request-properties/shared/list-property-editor/ListPropertyEditor.module.scss
+++ b/packages/studio/src/components/modules/studio/api-editor/request-builder/request-properties/shared/list-property-editor/ListPropertyEditor.module.scss
@@ -14,6 +14,7 @@
     border-bottom: 1px solid var(--color-border);
     height: 42px;
     position: relative;
+    overflow: hidden;
 
     .paramKey {
       border-right: 1px solid var(--color-border);
@@ -65,6 +66,7 @@
       position: relative;
       display: flex;
       align-items: stretch;
+      overflow: hidden;
 
       // For regular input elements (password fields)
       > input {
